# iot-hub-c-intel-edison-client-app

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  buildSDK.sh  certs.c  certs.h  config.h  main.c  wiring.c  wiring.h
